egonlang-core/res/examples/invalid/let_decl_in_grouping_parans.eg
(let a = 123;);

// out: SyntaxError: unexpected "let"; expected: ["\"!\"", "\"(\"", "\")\"", "\"-\"", "\"..\"", "\"[\"", "\"false\"", "\"if\"", "\"true\"", "\"{\"", "identifier", "number", "string"]
// out: SyntaxError: unexpected ")"; expected: ["\"!\"", "\"(\"", "\"-\"", "\"..\"", "\"[\"", "\"const\"", "\"false\"", "\"fn\"", "\"if\"", "\"let\"", "\"true\"", "\"{\"", "\"}\"", "identifier", "number", "string"]